# pcompress

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  Makefile.in  README.md  VENDOR_PATCHES.md  adaptive_compress.c  allocator.h  config  flake.nix  libbsc_compress.c  lz4_compress.c  meta_stream.h  pcompress.c  pcompress.h  zstd_compress.c
.github/workflows/: ci.yml  nightly.yml  release.yml
archive/: pc_arc_filter.h  pc_archive.h
archive/libarchive/: Makefile.in  aclocal.m4  config.h.in  configure
archive/libarchive/libarchive/: archive.h  archive_entry.h  archive_entry_xattr.c  archive_private.h  archive_virtual.c
archive/patches/: pcompress_libarchive.patch
crypto/: crypto_utils.c  crypto_utils.h  ossl_compat.h  sha2_utils.c
crypto/aes/: crypto_aes.c  crypto_aes.h
crypto/blake2/: blake2-config.h  blake2.h  blake2_digest.h  blake2b-round-neon.h  blake2b_avx.c  blake2b_avx512.c  blake2b_neon.c  blake2b_sse2.c  blake2b_sse41.c  blake2b_ssse3.c  blake2bp_avx512.c  blake2bp_neon.c  blake2bp_sse2.c  blake2bp_sse41.c  blake2bp_ssse3.c
crypto/keccak/: genKAT.c
crypto/old/: sha2_utils_old.c
crypto/scrypt/: crypto_aesctr.c  crypto_aesctr.h
crypto/xsalsa20/: xsalsa20_xor.c
docs/: ADDING_ALGORITHMS.md  ARCHITECTURE.md  DEPENDENCIES.md  Doxyfile  MIGRATION_v4.md  NIX.md  PERFORMANCE.md  PORTING.md  SIMD_OPTIMIZATION.md  TESTING.md
filters/analyzer/: analyzer.h
lzma/: LzmaEnc.c  LzmaEnc.h  Ppmd8.h
rabin/: rabin_dedup.c  rabin_dedup.h
test/: corpus_checksums.txt  run_all_tests.sh  run_test.sh  t1.tst  t3.tst  t6.tst  t7.tst
test/backward_compat/: run_backward_compat.sh
test/backward_compat/reference_archives/: README  ref_bzip2_L6_64k.pz  ref_lz4_L6_64k.pz  ref_lzma_L6_64k.pz  ref_ppmd_L6_64k.pz  ref_zlib_L6_64k.pz  reference_input.sha256
test/fuzz/: fuzz_compress.c  fuzz_crc.c  fuzz_decompress.c
test/integration/: test_archive.sh  test_compress.sh  test_crypto.sh  test_dedup.sh  test_edge_cases.sh  test_multithread.sh
test/performance/: bench_algos.c
test/unit/: minunit.h  test_blake2.c  test_compress.c  test_crc.c  test_slab.c  test_xxhash.c
utils/: cpu_features.c  cpu_features.h  cpu_features_arm64.c  cpu_features_riscv.c  cpu_features_x86_64.c  cpuid.c  cpuid.h  sse_level.c  utils.c  utils.h  xxhash_avx512.c  xxhash_base.c  xxhash_neon.c  xxhash_sse2.c  xxhash_sse4.c
